<resources>
    <string name="app_name">RxAndroid</string>
    <string name="observer_pattern_example">Observer Pattern Example</string>
    <string name="title_activity_observer_pattern">Observer Pattern Activity</string>
    <string name="subscribe_1">Subscribe 1</string>
    <string name="subscribe_2">Subscribe 2</string>
    <string name="subscribe_3">Subscribe 3</string>
    <string name="subscribe_all">Subscribe All</string>
    <string name="un_subscribe_all">Un-subscribe All</string>
    <string name="send_random_data">Send Random data</string>
    <string name="subscribed">Subscribed</string>
    <string name="un_subscribe_1">Un-Subscribe 1</string>
    <string name="un_subscribe_2">Un-Subscribe 2</string>
    <string name="un_subscribe_3">Un-Subscribe 3</string>
    <string name="un_subscribed">Un-Subscribed</string>
    <string name="title_activity_future">Future Activity</string>
    <string name="future_and_op">Future</string>
    <string name="factorial_for_random_number">Factorial for Random number</string>
    <string name="data_available">Data Available</string>
    <string name="title_activity_fun_starts_here">Fun Starts Here</string>
    <string name="rx">RX</string>
    <string name="title_activity_rx_example1">SubscribeOn Activity</string>
    <string name="subscribe_on">Subscribe on</string>
    <string name="clear">Clear</string>
    <string name="run_on_main">Run On Main</string>
    <string name="run_on_new">Run on new</string>
    <string name="run_on_cmpt">Run On Cmpt</string>
    <string name="run_on_es">Run on ES</string>
    <string name="start_of_block">Start of Block</string>
    <string name="end_of_block">End of Block</string>
    <string name="done">Done</string>
    <string name="error">Error</string>
    <string name="run_on_imm">Run on Imm</string>
    <string name="rxbus">RxBus</string>
    <string name="title_activity_rx_bus">RxBusActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_text">Send text</string>
    <string name="send_object">Send Object</string>
    <string name="result">Result</string>
    <string name="title_activity_binding">BindingActivity</string>
    <string name="binding">Binding</string>
    <string name="greet_user">Greet User</string>
    <string name="enterFirstLast">Enter First name and Last name</string>
    <string name="title_activity_rx_example">RxExampleActivity</string>
    <string name="examples">Examples</string>
    <string name="merge">Merge</string>
    <string name="retry_with_delay">Retry With Delay</string>
    <string name="run_on_delay">Run on Delay</string>
    <string name="zip_with">Zip With</string>
    <string name="timer">Timer</string>
    <string name="retrofit">Retrofit</string>
    <string name="title_activity_retrofit">RetrofitActivity</string>
</resources>
