<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

            <Button
                android:id="@+id/subscribe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subscribe_all"
                tools:ignore="ButtonStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/subscribe_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/subscribe_1"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/subscribe_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/subscribe_2"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/subscribe_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/subscribe_3"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:maxLines="100"
            android:scrollbars="vertical" />

        <Button
            android:id="@+id/send_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_random_data" />

    </LinearLayout>
</layout>