<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/runOnMain"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/run_on_main"
                tools:ignore="ButtonStyle" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/runOnNew"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/run_on_new"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/runOnNewCommonES"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/run_on_es"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/runOnCMPT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/run_on_cmpt"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/runOnImm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/run_on_imm"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:maxLines="100"
            android:scrollbars="vertical" />

        <Button
            android:id="@+id/clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear" />

    </LinearLayout>
</layout>